--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 document.getElementById('result').textContent =" please eneter valid value";
                 document.getElementById('result1').textContent ="";
                 document.getElementById('result2').textContent ="";
+                return;
             }
             // else{
                 let Apparent = (Voltage * Current)/1000;
